# cppdemo

./: .gitignore  3.h  CMakeLists.txt  base.h  base_tests.cpp  demo.cpp  demo.h  empty.cpp  function_object.h  function_object_tests.cpp  init_tests.cpp  main.cpp  unit_tests.cpp  vector.h  vector_tests.cpp
base/: base.cpp  base.h
container/: vec.h
